--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -2,9 +2,9 @@ name: Python application
 
 on:
   push:
-    branches: [ "main", "chatbot" ]  # Runs on push to the main and chatbot branches
+    branches: [ "main", "chatbot", "frontend" ]  # Runs on push to the main, chatbot, and frontend branches
   pull_request:
-    branches: [ "main", "chatbot" ]  # Runs on pull request to the main and chatbot branches
+    branches: [ "main", "chatbot", "frontend" ]  # Runs on pull request to the main, chatbot, and frontend branches
 
 permissions:
   contents: read
